testsuite/poke.pkl/offset-type-diag-5.pk
/* { dg-do compile } */

/* Offset types only work on complete types.  */

var N = 2;
type List = int[N];

fun foo = (offset<int,List> input, /* { dg-error "on complete types" } */
             int len) int:
{
    var ret = 0;
    return ret;
}
